# pylighter

./: .env.example  .gitignore  CLAUDE.md  README.md  USAGE.md  cross_exchange_arbitrage.py  grid_strategy.py  main.py  pyproject.toml  switch_account_tier.py  switch_to_premium.py
docs/: account.md  api-reference.md  examples-guide.md  faq.md  get-started-for-programmers-1.md  get-started-for-programmers.md  grid-strategy-guide.md  rate-limits.md  supported-tokens.md  troubleshooting.md  websocket.md
examples/: analyze_minimum_order_amounts.py  create_market_order.py  get_info.py  grid_strategy_simulation.py  multi_symbol_trading.py  system_setup.py  ton_contract_trading.py
pylighter/: __init__.py  client.py  market_utils.py  order_manager.py  websocket_manager.py
utils/: __init__.py  logger_config.py
